--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-matrix:
-    name: Build ${{ matrix.target }}
-    runs-on: ${{ matrix.os }}
+  build:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: macos-latest
@@ -18,15 +17,40 @@ jobs:
             target: win
             build_script: package:win
             artifact_name: sticky-tasks-win
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      - run: npm install
-      - run: npm run ${{ matrix.build_script }}
-      - uses: actions/upload-artifact@v4
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Print versions (debug)
+        run: |
+          node -v
+          npm -v
+          npx electron --version || true
+          npx electron-builder --version || true
+
+      - name: Build installer
+        env:
+          # Empêche toute tentative de signature/notarisation
+          CSC_IDENTITY_AUTO_DISCOVERY: "false"
+          # Évite certains soucis de téléchargement du binaire Electron
+          ELECTRON_SKIP_BINARY_DOWNLOAD: "false"
+          # Token utile à electron-builder (même si on n’upload pas de release)
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run ${{ matrix.build_script }}
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
           path: dist/*
